# Genedle

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: genedle.rs  mod.rs  spelling_gene.rs
backend/src/games/: genections.rs  genedle.rs  mod.rs  spelling_gene.rs
frontend/: package-lock.json  package.json
frontend/app/: app.css  routes.ts
frontend/app/components/: LetterGrid.css  LetterGrid.tsx  Scoreboard.css  Scoreboard.tsx
frontend/app/routes/: genedle.tsx  home.tsx  spelling-gene.tsx
